Fixed whitespace

--- a/static/css/form.css
+++ b/static/css/form.css
@@ -15,3 +15,7 @@
     border-radius: 16px;
     width: 100%;
   }
+
+  .whitespace{
+    height: 100px;
+}
